scripts/nullaway/original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8.txt
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:32: error: [NullAway] assigning @Nullable expression to @NonNull field
    private GameField gameField = null;
                      ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:93: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        List<Point> availableExits = gameField.getFreeNeighbours(new Point(TAVERN_X, TAVERN_Y), null);
                                                                                                ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Cop.java:25: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        List<Point> availableExits = field.getFreeNeighbours(policeStationPos, null);
                                                                               ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Cop.java:44: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            field.setObjectInSector(nextPos.x, nextPos.y, null);
                                                          ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Cop.java:62: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        field.setObjectInSector(pos.x, pos.y, null);
                                              ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/DirectedMovableObj.java:32: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/MovableObj.java:13: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            field.setObjectInSector(pos.x, pos.y, null);
                                                  ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Hobo.java:31: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        List<Point> availableExits = field.getFreeNeighbours(glassStationPos, null);
                                                                              ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Hobo.java:49: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
            field.setObjectInSector(nextPos.x, nextPos.y, null);
                                                          ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Hobo.java:65: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
        field.setObjectInSector(pos.x, pos.y, null);
                                              ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/fieldobjects/Drunkard.java:54: error: [NullAway] assigning @Nullable expression to @NonNull field
                bottle = null;
                       ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:42: error: [NullAway] dereferenced expression currentInfo is @Nullable
                if(neighbourInfo == null || neighbourInfo.pathLength > currentInfo.pathLength + 1) {
                                                                                  ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:43: error: [NullAway] dereferenced expression currentInfo is @Nullable
                    nodesInfo.put(neighbour, new BFSNodeInfo(current, currentInfo.pathLength + 1));
                                                                                 ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:59: error: [NullAway] dereferenced expression currentInfo is @Nullable
        while (!currentInfo.predecessor.equals(current)) {
                           ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/field/BasicField.java:25: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
                row.add(new Sector(null));
                                   ^
    (see http://t.uber.com/nullaway )
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:26: error: [NullAway] initializer method does not guarantee @NonNull fields lightAreaStart (line 23), lightAreaEnd (line 24) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    protected BasicGamePrinter(int fieldWidth, int fieldHeight) {
              ^
    (see http://t.uber.com/nullaway )
16 errors
